--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,7 @@
 html {
 	box-sizing: border-box;
 	font-size: 62.5%;
+	margin-left: calc(100vw - 100%);
 }
 
 body {
