--- a/sass/pages/_newitem.scss
+++ b/sass/pages/_newitem.scss
@@ -6,7 +6,7 @@
 	padding: 3rem;
 	border: 1px solid rgba(0, 0, 0, 0.3);
 	box-shadow: .1rem .4rem .1rem rgba(0, 0, 0, 0.3);
-	animation: FadeInFromBottom .4s ease-out;
+	animation: FadeInFromBottom 1s ease-out;
 
 	ul {
 		list-style: none;
