--- a/sass/typography/_animations.scss
+++ b/sass/typography/_animations.scss
@@ -4,6 +4,11 @@
 		opacity: 0;
 	}
 
+	50% {
+		transform: translateY(10%);
+		opacity: 0.5;
+	}
+
 	100% {
 		transform: translateY(0);
 		opacity: 1;
